# alfred

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  Cargo.toml  README.md  build.js  cdk.json  devDeploy.js  docker-compose.yml  jest.config.js  package.json  pre-deploy.sh  prodDeploy.js  tsconfig.json
apps/dashboard/: Cargo.toml  dashboard.rs
apps/dashboard/routes/: index.rs
apps/dirwatch/: Cargo.toml  dirwatch.rs  lib.rs
apps/dirwatch/tests/: dirwatch_test.rs
apps/dispatch/: Cargo.toml  dispatch.rs
apps/movie_recommendation_engine/: Cargo.toml  batch_movies_request.rs  lib.rs  movie_recommendation_engine.rs  server.rs
apps/notify_new_movie/: Cargo.toml  notify_new_movie.rs
aws/: stack.ts
aws/lambdas/attach_blurhash/: README.md  attach_blurhash.rs
aws/lambdas/authorizer/: README.md  authorizer.rs
aws/lambdas/download_image_from_queue/: README.md  download_image_from_queue.rs
aws/lambdas/download_wallpaper_from_queue/: download_wallpaper_from_queue.rs
aws/lambdas/get_amoled_backgrounds_from_source/: get_amoled_backgrounds_from_source.rs
aws/lambdas/get_image/: README.md  get_image.rs
aws/lambdas/get_wallpaper/: get_wallpaper.rs
aws/lambdas/get_wallpapers_from_source/: README.md  get_wallpapers_from_source.rs
aws/lambdas/ignore_image_toggle/: README.md  ignore_image_toggle.rs
aws/lambdas/login/: README.md  login.rs
aws/lambdas/logout/: README.md  logout.rs
aws/lambdas/search_images/: README.md  search_images.rs
aws/lambdas/search_wallpapers/: README.md  search_wallpapers.rs
clients/cli/widescreen_wallpapers/: widescreen_wallpapers_cli.rs
infra/: main.tf  outputs.tf  sms_prefs.tf  variables.tf  versions.tf
lib/: Cargo.toml  lib.rs
lib/clients/: mod.rs
lib/clients/openai/: mod.rs
lib/clients/tmdb/: get_movie_by_id.rs  mod.rs
lib/dirwatch/: dirwatch.rs  mod.rs
lib/models/: mod.rs  reddit_image_post.rs
lib/rust/models/: access_token.rs  blurhash_queue_item.rs  dynamo_image.rs  http_response.rs  id_token.rs  image_search_dto.rs  mod.rs  movie_collection.rs  policy_document.rs  reddit_image_post.rs  refresh_token.rs
lib/rust/repositories/: mod.rs
lib/rust/repositories/cognito/: cognito.rs  mod.rs
lib/rust/repositories/dynamodb/: dynamodb.rs  mod.rs
lib/rust/repositories/s3/: mod.rs  s3.rs
lib/rust/repositories/sqs/: sqs.rs
lib/rust/services/: mod.rs
lib/rust/services/download/: download.rs
lib/rust/services/html_parser/: html_parser.rs
lib/rust/services/http/: http.rs
lib/services/download/: mod.rs
lib/services/html_parser/: html_parser.rs  mod.rs
lib/services/http/: http.rs
lib/ts/enums/: image.enum.ts  index.ts
lib/ts/models/: httpResponses.model.ts  image.model.ts  index.ts  wallpaper.model.ts
ui/: App.tsx  index.ts  index.tsx  styles.css  template.html
ui/clients/: axios.client.ts
ui/components/: index.ts
ui/components/Button/: Button.tsx
ui/components/DeleteDialog/: DeleteDialog.tsx
ui/components/Footer/: Footer.spec.tsx  Footer.tsx
ui/components/Header/: Header.spec.tsx  Header.tsx
ui/components/ImageCard/: ImageCard.tsx
ui/components/ImageSwiper/: ImageSwiper.tsx
ui/components/LoginForm/: LoginForm.spec.tsx  LoginForm.tsx
ui/components/Modal/: Modal.tsx
ui/components/MuiTheme/: MuiTheme.tsx  index.ts
ui/components/Navbar/: Navbar.tsx
ui/components/Router/: Router.tsx
ui/components/WallpaperCard/: WallpaperCard.tsx  index.ts
ui/components/WallpaperModal/: WallpaperModal.tsx  index.ts
ui/components/WallpaperSwiper/: WallpaperSwiper.tsx  index.ts
ui/pages/: index.ts
ui/pages/Crypto/: Crypto.tsx
ui/pages/Home/: Home.tsx
ui/pages/Investments/: Investments.tsx  index.ts
ui/pages/Login/: Login.spec.tsx  Login.tsx
ui/pages/Wallpapers/: Wallpapers.tsx
ui/stores/: images.store.ts  index.ts  user.store.ts  wallpapers.store.ts
ui/validators/: login.validator.ts
webpack/aws/: webpack.common.js  webpack.prod.js
webpack/ui/: webpack.common.js  webpack.dev.js  webpack.prod.js
widescreen_wallpapers/: widescreen_wallpapers.rs
