[package]
name = "picture_collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "lib/lib.rs"

[[bin]]
name = "widescreen_wallpapers"
path = "./widescreen_wallpapers/widescreen_wallpapers.rs"


[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.21"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }