[package]
name = "picture_collector"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "lib/rust/lib.rs"

[[bin]]
name = "attach_blurhash"
path = "./aws/lambdas/attach_blurhash/attach_blurhash.rs"

[[bin]]
name = "download_wallpaper_from_queue"
path = "./aws/lambdas/download_wallpaper_from_queue/download_wallpaper_from_queue.rs"

[[bin]]
name = "get_wallpapers_from_source"
path = "./aws/lambdas/get_wallpapers_from_source/get_wallpapers_from_source.rs"

[[bin]]
name = "widescreen_wallpapers_cli"
path = "./clients/cli/widescreen_wallpapers/widescreen_wallpapers_cli.rs"


[dependencies]
aws-config = "0.10.1"
aws-sdk-s3 = "0.10.1"
aws-sdk-sqs = "0.10.1"
aws-sdk-dynamodb = "0.10.1"
blurhash = "0.1.1"
bytes = "1.1.0"
lambda_runtime = "0.5.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.21"
image = "0.24.1"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
scraper = "0.12.0"
serde = "1.0.59"
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }