[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
notify = "6"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
dirs = "5"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
