[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "./dashboard.rs"
name = "dashboard"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
v_htmlescape = "0.15"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
once_cell = "1.19"
