[package]
name = "dirwatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dirwatch"
path = "./dirwatch.rs"

[lib]
path = "./lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
notify = "6"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"
