[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "./dispatch.rs"
name = "dispatch"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = "1"
aws-sdk-sns = "1"
dirwatch = { path = "../dirwatch" }
dirs = "5"                                                          # uses your existing watch_dir
