[package]
name = "movie_recommendation_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "./movie_recommendation_engine.rs"
name = "movie_recommendation_engine"

[lib]
path = "./lib.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
env_logger = "0.11"
log = "0.4"
time = { version = "0.3", features = ["formatting"] }
once_cell = "1.19"
clap = { version = "4", features = ["derive"] }
lib = { path = "../../lib" }
futures = "0.3"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
