[package]
name = "notify_new_movie"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "./notify_new_movie.rs"
name = "notify_new_movie"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = "1"
aws-sdk-sns = "1"
lib = { path = "../../lib" }
dirs = "5"
